--- a/package.json
+++ b/package.json
@@ -1,15 +1,40 @@
 {
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/sequelize": "^4.28.15",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mysql2": "^3.3.5",
     "path": "^0.12.7",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/mysql": "^2.15.21"
-  }
+    "@types/mysql": "^2.15.21",
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.1",
+    "ts-node": "^10.9.1"
+  },
+  "name": "assignmentinterview",
+  "version": "1.0.0",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/haoquachanh/formula1_backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/haoquachanh/formula1_backend/issues"
+  },
+  "homepage": "https://github.com/haoquachanh/formula1_backend#readme",
+  "description": ""
 }
