--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:migrate": "npm run sequelize db:migrate -- --config ./src/config/config.js --migrations-path ./dist/migrations"
   },
   "repository": {
     "type": "git",
