--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
